--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
 PORT=8080
 MONGO_URL=mongodb://localhost:27017/crud
 JWT_SECRET=JHGVG8WHYE812780@^%897fhiw
+
+# PORT = 8002
+# DEV_MODE =  development
+# # MONGO_URL = mongodb://localhost:27017
+# MONGO_URL = mongodb+srv://mansibhandari:Bhandarimansi22@cluster0.y9tkqgt.mongodb.net/User-server
+# JWT_SECRET = JHGVG8WHYE812780@^%897fhiw
